added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,128 @@
 # macOS
 .DS_Store
 *.bin
+build/ios/XCBuildData/PIFCache/project/PROJECT@v11_mod=ddd77787bf95a9e0988bdf1d79c93995_hash=bfdfe7dc352907fc980b868725387e98plugins=1OJSG6M1FOV3XYQCBH7Z29RZ0FPR9XDE1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=016b3139fd746f23b2acb29bdefa7cd0-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=033f1710d63b4a75b48baffc4b24fa57-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=042c33854e70a5de259dae1a14c2aedc-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=0626540de578ac91d2f9b01de21b6926-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=0627032f08d4ebd9f3bfb4507b2968de-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=0681d3099a516d099ab0b96785b9520a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=0d56255f23ef33fa3d38aa42ae60d250-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=11e805de738bc81a41e5c50c41017f32-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1428e633224f1f004110f2c7317acbf8-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1530866bf6e2c3ce8aab6edc094c926f-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1794db31603bcd84c9c8b2e06f220982-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=17cd54541efadc9a71e721b6a66ab81d-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=194a136e2222ac47ee33545b97a60f3a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1b92d824d7a3cb91e6c105eab80f2350-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1c5aa311c6001b98cff653890f71911a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1ee38b78994adff5825811076ae2f8bd-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=1eeea85e10c8f4adf844133c560e9281-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=227e1dfbe8f3092f183c573f757bc5f2-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=252514cd1b52d7f9f28fe726634f27b9-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=267aef46fbe6350e931e94eb644b4b95-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=2971c5f90f049233fe99394eac91a6b4-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=2bc960faa7cf2323d1f524045ce27971-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=2bebffb5b210eb082c8e0ad084fc9148-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=2f860c2a6cb676f95b9f68794b1623ff-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=30ed21e640b14587b41d644562321e62-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=328c6c7ed4be4e78d4789729e9bb9d0a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=3365184fcacad64bc5625b0348bda1a3-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=37a66b666c733daab4dd84d9a8b9a759-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=3cb00039016c650f19de2021420a8004-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=3de34455393d561f9dea3fcd0347cb37-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=3e6026d8aed1868a9160301f6f6b1204-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=3f1976a62b65de50fcd6b9e6a42c8401-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=412fecf389b351beced4999d7a078b4b-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=41ce09b6c9eadec965fbba275e71b5bb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=44cf162526a3e6933ecae4e339b9a651-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=44e57d8eef160f7b02f23743e6a07ea0-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=46073a7347c0ab60d2c0e55537cff961-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=4646a665a70e59e79639fcc47041db94-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=4967a0dc1589844049d54b19a3b6d70a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=498e9bac678fb4bfadde604787ab967d-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=49fde4a33c4123bc5dae6dc2c654e778-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=53000c36ce3a28c6034715c90b673a88-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=568039d0fe5d802e2a2f483ce9f51f02-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=57acb2e8875508acdf1a8520c2ac92d9-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=5ac46003dd1e5a108f11eca3b24e9872-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=5b28db7ea383053cb3cb89f2e42faaf4-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=5d8b81efe42a2cc05e4f9f84dafa1bbf-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=5f0e7049ecefc24b8d8b24a21c0b0f43-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=5f0f3179dc2bdb06ff52ec387bf9b3a5-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=60377312fd5a2616bb1154a9312f6800-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=65ac4296dc4398492ec09c07a6eb742a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=676b665d6dc586fe573bedaf989c8c69-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=6e3f03ef6219b518abb89e759f70f541-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7731341b2a90b775222f4f7d320fcd9c-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=77bff25240107d98793ce812f83840bb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=77c2fc4f6110c9161b502a201fd89cb2-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7980d317f87872df4aa75eefeec5a01b-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7998b5868db7ef84c5c7d4ade70aa8ae-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7a4db7999d738281e064597a2f8c392d-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7ae9b3a2dfa5f6c5724cc2167bb4b44c-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7f3f90f76207e657a1439963077f6e34-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7f8197df4b5e631470c3fff972504a9a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7ff286839e73095a9e5675beab3272d1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=7ff4621d6acd1ad47cdc395bf1cc6274-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=8207cbffe88b76b3e752956e7142f66a-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=83f0914429a4f2857d973ffa09ed9938-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=84f91776b33fab428843254905beae25-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=879670a28b8803a806e7884e9b9978fb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=8938dc17a37206b27e1c6da6843497da-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=8afaaea3ce83f3c8f3821522be592255-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=8f5b9ef3bfcc0d21f2ec3b9c67413526-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=8f81e194a3ab8938e9eaedc7176512e0-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=91e7358b4e0e14a7b9fa249f92929c78-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=93bc8c8d51c9a1676962959694a7381b-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9581d70d1dc7dcb076a71ca2309e90bb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=97c1c7ab26fe0cff96cbe70cba9bce19-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9903bac6bfacf5e0103f7b016cb15fa4-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9b4b256aff83418def7b7e2ef7e957d7-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9b4c0f8aaca44cdfe55eb18b98e8aa62-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9c3509c82db47e46fab13b72d577b3ce-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=9ce23c2af7d18038cebfe1b677c0fe57-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=a1ea39b81f15765e6be66595c92d6ede-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=a7b54a976b2025bf841accc588577185-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=aaf519ef9a5e55faeb7e7d01e0ad746b-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=af343878f2aac4a62e5c55d115b131bb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=b0ecea6277a1aba64da8b8665bcf8a0f-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=b4e3d0beb0acc4117641cec8ed940c81-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=b8d3537ec03fb2275a794bd95e3249e1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=bcc4acfa49fb257824bc739c7d4068b8-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=bcd96b6e4a585045af31fab5260fc9fb-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=bff3d4a98cbcebac747948fbdf2263f5-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=c383b8203fec4017c51bf1e22e80761c-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=c71ccfe5fdacd9d8f11ee244c8d52770-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=c8318ed7ec5a3abe076c489dd4a66b14-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=c9a62e7a312b632b9487568c28d42677-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=cb45d7f0974a9d7588d2dbaea87faa23-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=cc6ac027a51c190c73dc37bbec8e1b31-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=ce2e90e3000660752f642675c2fe7f4f-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=cea4b5ba7ad1cd44f26e6326ee67cff8-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=d06409ea08ef03e02911bd370a4d19f6-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=d4ffcc9a1b9efce1bbdcc7927e4c5e24-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=d793663a8842d9503ee6b45e86748c08-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=d8bdc10cabe8575e2d72115fc85c48f1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=dcf9ef45fd9d848ab065dcc5b7af5734-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=ddce4ee3b518498e5cfb83bca40a3ab6-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=de73c58cc609e936063bc9795e0b4ca7-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=de93265e38c89efb8ebe369e6619ada1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=e253993c0553cc3835ae8a843d4b3a86-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=e3880edb8efdf0615966f5973585bc02-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=e7116a20c17b9039ee35e599e8ec26c1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=e7259c26bedff32cfab6396f360ab4de-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f0cce2bc8896a59b6f19c04baaaf10a7-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f1d9898de1ce7335e62c2ad87285e84f-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f2599fa789ca70320f4eb67290843ef4-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f2db280b934c0ab348d9270740eabedc-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f2db668476fa838f4d21908e1126ba05-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f403d8c89fd638502669abefb4098f99-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f4eebbe0a9e3157edf0faaf1fd49ed1e-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=f9502a174f0c1a973dc1c8fed2f3bbe1-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=fd8c6a272cbfa12ded85c9072a520e23-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=fda6025369732f125b0d5a9c8299b109-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=fda69c13875634def8baf51466788688-json
+build/ios/XCBuildData/PIFCache/target/TARGET@v11_hash=feeea1ab9d0c84425a0e24012c192dfa-json
+build/ios/XCBuildData/PIFCache/workspace/WORKSPACE@v11_hash=(null)_subobjects=70997ebb6f6f43ecfc6e74afb5c1d1b4-json
